2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>

	* WrapPanelTest.cs: Added.

2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Added DockProperty test.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Stretch, Stretch2, MakeVisible tests.

2007-06-09  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Added Panel, ToolBar tests.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added some ScrollViewer-related tests.

2007-06-08  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added tests for IScrollInfo.

2007-06-07  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollViewerTest.cs: Added.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs, PanelTest.cs: Added AlignmentMetadata test.

2007-06-06  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Alignment test.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added Measure test.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Added.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Added DockPanel test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Expanded MeasureOverride test, added ButtonMeasureOverride test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Expanded MeasureOverride test.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* DockPanelTest.cs: Added.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* TabControlTest.cs: Added.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added IAddChild test.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added Focusable test.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* PanelTest.cs: Added ZIndex test.
