@@ -1,5 +1,9 @@
 2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* TabItemTest.cs: Added.
+
+2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* WrapPanelTest.cs: Added.
 
 2007-06-10  George Giolfan  <georgegiolfan@yahoo.com>
